Add info about mobile health diaries

--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
           <div class="divider"></div>
           <div class="section">
             <h5>EIT Digital Master School</h5>
-            <p>In 2014 I was accepted to <a href="http://www.masterschool.eitdigital.eu" arget="_blank" class="styled-link-dark">EIT Digital Master School</a> with the technical major in <a href="http://www.masterschool.eitdigital.eu/programmes/hcid/" arget="_blank" class="styled-link-dark">Human Computer Interaction and Design</a>. EIT Digital Master School is a two-year double degree masters programme that combines teaching of up-to-date ICT topics with skills in Innovation and Entrepreneurship. It is organized by <a href="www.eitdigital.eu" arget="_blank" class="styled-link-dark">EIT Digital</a> &mdash; leading European open innovation organisation.</p><br><br>
+            <p>In 2014 I was accepted to <a href="http://www.masterschool.eitdigital.eu" target="_blank" class="styled-link-dark">EIT Digital Master School</a> with the technical major in <a href="http://www.masterschool.eitdigital.eu/programmes/hcid/" target="_blank" class="styled-link-dark">Human Computer Interaction and Design</a>. EIT Digital Master School is a two-year double degree masters programme that combines teaching of up-to-date ICT topics with skills in Innovation and Entrepreneurship. It is organized by <a href="www.eitdigital.eu" target="_blank" class="styled-link-dark">EIT Digital</a> &mdash; leading European open innovation organisation.</p><br><br>
             <div class="row valign-wrapper">
               <div class="col s2 valign-wrapper center-align">
                 <img src="images/Aalto_logo.jpg" class="circle responsive-img z-depth-2">
               </div>
               <div class="col s4 valign-wrapper center-align">
-                <p>For the first year of Master School I studied in <a href="http://www.aalto.fi/en/" arget="_blank" class="styled-link-dark">Aalto University</a> in Espoo, Finland.</p>
+                <p>For the first year of Master School I studied in <a href="http://www.aalto.fi/en/" target="_blank" class="styled-link-dark">Aalto University</a> in Espoo, Finland.</p>
               </div>
               <div class="col s2 valign-wrapper center-align">
                 <img src="images/KTH_logo.jpg" class="circle responsive-img z-depth-2">
               </div>
               <div class="col s4 valign-wrapper center-align">
-                <p>Currently I'm on the second year studying in <a href="https://www.kth.se/en" arget="_blank" class="styled-link-dark">KTH Royal Institute of Technology</a> in Stockholm, Sweden.</p>
+                <p>Currently I'm on the second year studying in <a href="https://www.kth.se/en" target="_blank" class="styled-link-dark">KTH Royal Institute of Technology</a> in Stockholm, Sweden.</p>
               </div>
             </div>
           </div>
@@ -91,13 +91,13 @@
             </div>
             <div class="row valign-wrapper">
               <div class="col s5">
-                <p>In 2013 I was accepted for post-graduate studies in Mathematics and Software Engineering for Computers in <a href="http://www.uniyar.ac.ru/en/" arget="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a> in my home city &mdash; Yaroslavl, Russia. Right now I'm on leave of abscence for this studies due to my studies in Europe.</p>
+                <p>In 2013 I was accepted for post-graduate studies in Mathematics and Software Engineering for Computers in <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a> in my home city &mdash; Yaroslavl, Russia. Right now I'm on leave of abscence for this studies due to my studies in Europe.</p>
               </div>
               <div class="col s2 center-align">
                 <img src="images/YarSU_logo.jpg" class="circle responsive-img z-depth-2">
               </div>
               <div class="col s5 right-align">
-                <p>In 2013 I graduated from <a href="http://www.uniyar.ac.ru/en/" arget="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a> with the specialist degree in Applied Mathematics and Information Science.</p>
+                <p>In 2013 I graduated from <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a> with the specialist degree in Applied Mathematics and Information Science.</p>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
             <h5>Summer schools</h5>
             <div class="row valign-wrapper">
               <div class="col s4 center-align">
-                <p><a href="https://www.eitdigital.eu/entrepreneurial-education/summer-schools/summer-school-health-wellbeing/" arget="_blank" class="styled-link-dark">EIT Digital Summer School Health &amp; Wellbeing</a>, Eindhoven, the Netherlands.</p>
+                <p><a href="https://www.eitdigital.eu/entrepreneurial-education/summer-schools/summer-school-health-wellbeing/" target="_blank" class="styled-link-dark">EIT Digital Summer School Health &amp; Wellbeing</a>, Eindhoven, the Netherlands.</p>
                 <p>12-24 July 2015</p>
               </div>
               <div class="col s4 center-align">
@@ -114,7 +114,7 @@
                 <p>26-31 August 2012</p>
               </div>
               <div class="col s4 center-align">
-                <p><a href="http://romip.ru/russir2012/" arget="_blank" class="styled-link-dark">6th Russian Summer School in Information Retrieval</a>, Yaroslavl, Russia.</p>
+                <p><a href="http://romip.ru/russir2012/" target="_blank" class="styled-link-dark">6th Russian Summer School in Information Retrieval</a>, Yaroslavl, Russia.</p>
                 <p>6-10 August 2012</p>
               </div>
             </div>
@@ -269,10 +269,10 @@
           <span class="card-title blue-grey-text text-darken-4">Work experience</span>
           <div class="row valign-wrapper">
               <div class="col s6 right-border">
-                <p class="right-align"><strong>Member of <a href="https://yar.fruct.org" arget="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a> at <a href="http://www.uniyar.ac.ru/en/" arget="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a>.</strong> The laboratory is part of the <a href="http://fruct.org" arget="_blank" class="styled-link-dark">FRUCT</a> organization. During my work there I participated in many different R&amp;D projects in the fields of Smart Spaces, IoT, Mobile and crossplatform development. I also had a chance to present these projects on international conferences.</p>
+                <p class="right-align"><strong>Member of <a href="https://yar.fruct.org" target="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a> at <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a>.</strong> The laboratory is part of the <a href="http://fruct.org" arget="_blank" class="styled-link-dark">FRUCT</a> organization. During my work there I participated in many different R&amp;D projects in the fields of Smart Spaces, IoT, Mobile and crossplatform development. I also had a chance to present these projects on international conferences.</p>
               </div>
               <div class="col s6">
-                <p><strong>Maintenance specialist at <a href="globalcorp.ru" arget="_blank" class="styled-link-dark">Global Corp</a> in Yaroslavl, Russia.</strong> My main duty in this company was maintance and testing of big online electronic payment system. I also worked on development of the web site of the company.</p>
+                <p><strong>Maintenance specialist at <a href="globalcorp.ru" target="_blank" class="styled-link-dark">Global Corp</a> in Yaroslavl, Russia.</strong> My main duty in this company was maintance and testing of big online electronic payment system. I also worked on development of the web site of the company.</p>
               </div>
             </div>
           <div class="divider"></div>
@@ -286,7 +286,33 @@
                 </div></div>
                 <p>This is a project for Physical Interaction and Design course that we did in KTH in September - October 2015. Basically, it's a low-polygonal-shaped action blocks toy. All the blocks can stick to each other with the use of magnets. There's one main block that contains some electronics that allow to perform simple play logic: you can shake it and it will produce the sound of some animal. This action will give a child a starting point for building, leaving no limitations for inspiration.</p>
                 <p>For this project we developed everything starting from the idea and ending with the fully-working prototype. I was responsible for all 3D printing, including creation of actual 3D models of the blocks. I also took part in developing idea of the toy, assembling the final prototype and creating a platform (electronical part of the project) with other teammates.</p>
-                <p><strong>Project blog:</strong> <a href="https://actionblocks.wordpress.com" arget="_blank" class="styled-link-dark">Action Blocks</a></p>
+                <p><strong>Project blog:</strong> <a href="https://actionblocks.wordpress.com" target="_blank" class="styled-link-dark">Action Blocks</a></p>
+              </div>
+            </li>
+            <li>
+              <div class="collapsible-header">Mobile Health Diaries</div>
+              <div class="collapsible-body">
+                <p>Set of three mobile health applications for Android platform:</p>
+                <table class="container">
+                  <col width="40%">
+                  <col width="30%">
+                  <col width="30%">
+                  <thead>
+                    <tr>
+                        <th class="center-align" data-field="bpd"><a href="https://play.google.com/store/apps/details?id=org.fruct.yar.bloodpressurediary" target="_blank" class="styled-link-dark">Blood Presure Diary</a> (and it's paid version &mdash; <a href="https://play.google.com/store/apps/details?id=org.fruct.yar.bloodpressurediary.pro" target="_blank" class="styled-link-dark">Blood Pressure Diary Pro</a>)</th>
+                        <th class="center-align" data-field="wd"><a href="https://play.google.com/store/apps/details?id=org.fruct.yar.weightdiary" target="_blank" class="styled-link-dark">Weight Diary</a></th>
+                        <th class="center-align" data-field="hsd"><a href="https://play.google.com/store/apps/details?id=org.fruct.yar.healthysleepdiary" target="_blank" class="styled-link-dark">Healthy Sleep Diary</a></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>A tool for tracking and analyzing blood pressure measurements. It has a lot of useful features, such as reminders, multi-user interface, data representation in different forms, import and export, receiving measurements from BT or NFC blood pressure monitors, data synchronization with cloud and so on.</td>
+                      <td>A tool for tracking and analyzing body weight measurements that also shows statistics and has export feature, as well as data synchronization.</td>
+                      <td>Simple tool for tracking and analyzing sleep time with data synchronization feature.</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <p>These projects were done inside Yaroslavl FRUCT Laboratory and I started to work on them when they were already published and under development for some time. I worked on bug fixes and optimization, helped to develope some small features, worked in applications' support and also developed a library that was used in all three applications to synchronize data with remote server.</p>
               </div>
             </li>
             <li>
@@ -317,7 +343,7 @@
               <p>July 2015</p>
             </div>
             <div class="col s9">
-              <p><a href="https://www.eitdigital.eu/news-events/news/article/eit-digital-summer-school-health-and-wellbeing-2015-a-brainiac-work-out/" arget="_blank" class="styled-link-dark">Winner of the EIT Digital Summer School Health &amp; Wellbeing</a></p>
+              <p><a href="https://www.eitdigital.eu/news-events/news/article/eit-digital-summer-school-health-and-wellbeing-2015-a-brainiac-work-out/" target="_blank" class="styled-link-dark">Winner of the EIT Digital Summer School Health &amp; Wellbeing</a></p>
             </div>
           </div>
           <div class="row valign-wrapper">
@@ -325,7 +351,7 @@
               <p>May 2013</p>
             </div>
             <div class="col s9">
-              <p><a href="http://fruct.org/node/337471" arget="_blank" class="styled-link-dark">Winner of the English language essays' contest</a>, organized by FRUCT, Aalto University and EIT ICT Labs</p>
+              <p><a href="http://fruct.org/node/337471" target="_blank" class="styled-link-dark">Winner of the English language essays' contest</a>, organized by FRUCT, Aalto University and EIT ICT Labs</p>
             </div>
           </div>
           <div class="row valign-wrapper">
@@ -341,7 +367,7 @@
               <p>March 2013</p>
             </div>
             <div class="col s9">
-              <p>Finalist of the <a href="http://www.lgappscontest.ru" arget="_blank" class="styled-link-dark">LG Smart TV Apps Contest</a> 2012</p>
+              <p>Finalist of the <a href="http://www.lgappscontest.ru" target="_blank" class="styled-link-dark">LG Smart TV Apps Contest</a> 2012</p>
             </div>
           </div>
         </div>
