Update my phone number

--- a/index.html
+++ b/index.html
@@ -392,9 +392,8 @@
         <div class="col s12 valign-wrapper">
           <h5>Contacts</h5>
         </div>
-        <div class="col s12 valign-wrapper">
-          <h5></h5>
-        </div>
+      </div>
+      <div class="row">
         <div class="col s1 valign-wrapper left-align">
           <i class="material-icons blue-grey-text text-darken-1">email</i>
         </div>
@@ -405,7 +404,7 @@
           <i class="material-icons blue-grey-text text-darken-1">phone</i>
         </div>
         <div class="col s2 valign-wrapper right-align">
-          <span class="blue-grey-text text-darken-1">+79159695374</span>
+          <span class="blue-grey-text text-darken-1">(+46)~73~846~7113</span>
         </div>
       </div>
     </div>
