--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
                 <div class="container"><div class="video-container no-controls">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/k9lKO3CLBGM" frameborder="0" allowfullscreen></iframe>
                 </div></div>
-                <p>This is a project for Physical Interaction and Design course that we did in KTH in September - October 2015. Basically, it's a low-polygonal-shaped action blocks toy. All the blocks can stick to each other with the use of magnets. There's one main block that contains some electronics that allow to perform simple play logic: you can shake it and it will produce the sound of some animal. This action will give a child a starting point for building, leaving no limitations for inspiration.</p>
-                <p>For this project we developed everything starting from the idea and ending with the fully-working prototype. I was responsible for all 3D printing, including creation of actual 3D models of the blocks. I also took part in developing idea of the toy, assembling the final prototype and creating a platform (electronical part of the project) with other teammates.</p>
-                <p><strong>Project blog:</strong> <a href="https://actionblocks.wordpress.com" target="_blank" class="styled-link-dark">Action Blocks</a></p>
+                <p>This is a project for Physical Interaction and Design course that we did in KTH in September - October 2015. Basically, it's a low-polygonal-shaped action blocks toy. All the blocks can stick to each other with the use of magnets. There's one main block that contains some electronics that allow to perform simple play logic: you can shake it and it will produce the sound of some animal. This action will give a child a starting point for building, leaving no limitations for inspiration.<br><br>
+                For this project we developed everything starting from the idea and ending with the fully-working prototype. I was responsible for all 3D printing, including creation of actual 3D models of the blocks. I also took part in developing idea of the toy, assembling the final prototype and creating a platform (electronical part of the project) with other teammates.<br><br>
+                <strong>Project blog:</strong> <a href="https://actionblocks.wordpress.com" target="_blank" class="styled-link-dark">Action Blocks</a></p>
               </div>
             </li>
             <li>
@@ -313,6 +313,14 @@
                   </tbody>
                 </table>
                 <p>These projects were done inside Yaroslavl FRUCT Laboratory and I started to work on them when they were already published and under development for some time. I worked on bug fixes and optimization, helped to develope some small features, worked in applications' support and also developed a library that was used in all three applications to synchronize data with remote server.</p>
+              </div>
+            </li>
+            <li>
+              <div class="collapsible-header">Pulse Detector</div>
+              <div class="collapsible-body">
+                <p>Mobile application for heart rate measuring with the use of device's camera for Symbian platform. The application was needed, since there were no applications of this type on Symbian platform. Pulse Detector became the first and the one of a type. But the most valuable thing of this project is not an application itself, but the heart rate measuring algorithm that was developed for it. For the times of the project only few papers on this topic were published. Our experiments showed that algorithms for heart rate measuring using mobile phone camera that were described in these papers work very bad and give bad results. Therefore, it was decided to developed own algorithms. The work on the whole project (algorithm + application) was done by me with the help of my supervisor. The results of the project were also published and presented on international conferences (see <a id="publicationsLink" class="styled-link-dark">Publications</a>). The project also became the topic for my Specialist Degree Thesis.<br><br>
+                <strong>Project's page on FRUCT web: <a href="http://fruct.org/node/325565" target="_blank" class="styled-link-dark">Heart Rate Measuring Using Mobile Phone`s Camera</a></strong><br>
+                <strong>Application on Opera Mobile Store (former Ovi Store by Nokia): <a href="http://symbian.sigma.apps.opera.com/en_se/pulse_detector.html" target="_blank" class="styled-link-dark">Pulse Detector</a> and <a href="http://ovi.sigma.apps.opera.com/en_se/pulse_detector_pro.html" target="_blank" class="styled-link-dark">Pulse Detector Pro</a></strong></p>
               </div>
             </li>
             <li>
