Add info about RoDaFlow project

--- a/index.html
+++ b/index.html
@@ -324,6 +324,11 @@
               </div>
             </li>
             <li>
+              <div class="collapsible-header">RoDaFlow</div>
+              <div class="collapsible-body"><p>A framework for development of dataflow network agents for <a href="http://sourceforge.net/projects/smart-m3/" target="_blank" class="styled-link-dark">Smart-M3 platform</a> with substitution mechanism. The project was done as part of a big project dealing with development of substitution mechanism for dataflow networks built upon Smart Spaces and IoT paradigms. The framework is written in Java and completely developed by me with the help of my supervisor.<br><br>
+                <strong>Project page: <a href="https://yar.fruct.org/projects/rodaflow" target="_blank" class="styled-link-dark">RoDaFlow</a></strong></p></div>
+            </li>
+            <li>
               <div class="collapsible-header">Under development..</div>
               <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
             </li>
