Add info about rest of the projects

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <li>
               <div class="collapsible-header">Pulse Detector</div>
               <div class="collapsible-body">
-                <p>Mobile application for heart rate measuring with the use of device's camera for Symbian platform. The application was needed, since there were no applications of this type on Symbian platform. Pulse Detector became the first and the one of a type. But the most valuable thing of this project is not an application itself, but the heart rate measuring algorithm that was developed for it. For the times of the project only few papers on this topic were published. Our experiments showed that algorithms for heart rate measuring using mobile phone camera that were described in these papers work very bad and give bad results. Therefore, it was decided to developed own algorithms. The work on the whole project (algorithm + application) was done by me with the help of my supervisor. The results of the project were also published and presented on international conferences (see <a id="publicationsLink" class="styled-link-dark">Publications</a>). The project also became the topic for my Specialist Degree Thesis.<br><br>
+                <p>Mobile application for heart rate measuring with the use of device's camera for Symbian platform. The application was needed, since there were no applications of this type on Symbian platform. Pulse Detector became the first and the one of a type. But the most valuable thing of this project is not an application itself, but the heart rate measuring algorithm that was developed for it. For the times of the project only few papers on this topic were published. Our experiments showed that algorithms for heart rate measuring using mobile phone camera that were described in these papers work very bad and give bad results. Therefore, it was decided to developed own algorithms. The work on the whole project (algorithm + application) was done by me with the help of my supervisor. The results of the project were also published and presented on international conferences (see <a id="publicationsLink" class="styled-link-dark">Publications</a>). Pulse Detector application won the Best Demo prize of 13th FRUCT Conference. The project also became the topic for my Specialist Degree Thesis.<br><br>
                 <strong>Project's page on FRUCT web: <a href="http://fruct.org/node/325565" target="_blank" class="styled-link-dark">Heart Rate Measuring Using Mobile Phone`s Camera</a></strong><br>
                 <strong>Application on Opera Mobile Store (former Ovi Store by Nokia): <a href="http://symbian.sigma.apps.opera.com/en_se/pulse_detector.html" target="_blank" class="styled-link-dark">Pulse Detector</a> and <a href="http://ovi.sigma.apps.opera.com/en_se/pulse_detector_pro.html" target="_blank" class="styled-link-dark">Pulse Detector Pro</a></strong></p>
               </div>
@@ -329,8 +329,21 @@
                 <strong>Project page: <a href="https://yar.fruct.org/projects/rodaflow" target="_blank" class="styled-link-dark">RoDaFlow</a></strong></p></div>
             </li>
             <li>
-              <div class="collapsible-header">Under development..</div>
-              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+              <div class="collapsible-header">Walky Doggy</div>
+              <div class="collapsible-body"><p>Simple activities stimulating fitness application for Android platform. It's main idea is to become a virtual dog for it's user with the only need &mdash; need to walk, to stimulate the user for walking activities. I was lead developer and manager of this project, managing the work of one student.<br><br>
+                <strong>Application on Google Play: <a href="https://play.google.com/store/apps/details?id=org.fruct.yar.walkydoggy" target="_blank" class="styled-link-dark">Walky Doggy</a></strong></p></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Explain the Word!</div>
+              <div class="collapsible-body"><p>Game for LG Smart TV platform with a gameplay similar to <a href="https://en.wikipedia.org/wiki/Alias_(board_game)" target="_blank" class="styled-link-dark">Alias</a> board game. I developed idea of the game and was a lead developer and manager of the project, also managing the work of two studenst. The game is only in Russian, since it was developed to participate in <a href="http://www.lgappscontest.ru" target="_blank" class="styled-link-dark">LG Smart TV Apps Contest</a> 2012 and it made it to the finals. The game was published in <a href="http://ru.lgappstv.com/appspc/store/product/retrieveCategoryList.lge?dummy=002" target="_blank" class="styled-link-dark">Russian LG Smart TV Apps Store</a>. Eventhough, it was just a project to participate in the Contest, me and my friends still enjoy playing it.</p></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Octotask</div>
+              <div class="collapsible-body"><p>Open source context-aware <a href="https://en.wikipedia.org/wiki/Getting_Things_Done" target="_blank" class="styled-link-dark">GTD</a>-style task collector and manager for Symbian platforms. The key features of the application include: automatic context detection by user's location, collection and synchronization of tasks from different external systems, event-based task activation. I was one of the main developers for this project.<br><br>
+                <strong>Project's page on FRUCT web: <a href="http://fruct.org/octotask" target="_blank" class="styled-link-dark">Octotask Project</a></strong><br>
+                <strong>Project's page on Yaroslavl FRUCT Laboratory web: <a href="https://yar.fruct.org/projects/octotask" target="_blank" class="styled-link-dark">Octotask Project</a></strong><br>
+                <strong>Application on Opera Mobile Store (former Ovi Store by Nokia): <a href="http://ovi.sigma.apps.opera.com/en_se/octotask.html" target="_blank" class="styled-link-dark">Octotask</a></strong><br>
+                <strong>Application on Google Play (Symbian port): <a href="https://play.google.com/store/apps/details?id=org.fruct.yar.octotask" target="_blank" class="styled-link-dark">Octotask</a></strong></p></div>
             </li>
           </ul>
         </div>
