Fix Global Corp link

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <p class="right-align"><strong>Member of <a href="https://yar.fruct.org" target="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a> at <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a>.</strong> The laboratory is part of the <a href="http://fruct.org" arget="_blank" class="styled-link-dark">FRUCT</a> organization. During my work there I participated in many different R&amp;D projects in the fields of Smart Spaces, IoT, Mobile and crossplatform development. I also had a chance to present these projects on international conferences.</p>
               </div>
               <div class="col s6">
-                <p><strong>Maintenance specialist at <a href="globalcorp.ru" target="_blank" class="styled-link-dark">Global Corp</a> in Yaroslavl, Russia.</strong> My main duty in this company was maintance and testing of big online electronic payment system. I also worked on development of the web site of the company.</p>
+                <p><strong>Maintenance specialist at <a href="http://globalcorp.ru" target="_blank" class="styled-link-dark">Global Corp</a> in Yaroslavl, Russia.</strong> My main duty in this company was maintance and testing of big online electronic payment system. I also worked on development of the web site of the company.</p>
               </div>
             </div>
           <div class="divider"></div>
