Add info about latest hackathon

--- a/index.html
+++ b/index.html
@@ -358,6 +358,14 @@
           <span class="card-title blue-grey-text text-darken-4">Awards</span>
           <div class="row valign-wrapper">
             <div class="col s3 right-align">
+              <p>November 2015</p>
+            </div>
+            <div class="col s9">
+              <p>Winner of the App Hack track at the <a href="http://timehack.splashthat.com" target="_blank" class="styled-link-dark">Time Hack hackathon</a> by <a href="http://timevillage.org" target="_blank" class="styled-link-dark">Time Village</a></p>
+            </div>
+          </div>
+          <div class="row valign-wrapper">
+            <div class="col s3 right-align">
               <p>September 2015</p>
             </div>
             <div class="col s9">
