Update copyright years

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        &copy; 2015 <a class="modal-trigger styled-link-light" href="#contact">Denis Laure</a>, All rights reserved.<a class="modal-trigger styled-link-light right" href="#credits">Credits</a>
+        &copy; 2015-2016 <a class="modal-trigger styled-link-light" href="#contact">Denis Laure</a>, All rights reserved.<a class="modal-trigger styled-link-light right" href="#credits">Credits</a>
       </div>
     </div>
   </footer>
