--- a/index.html
+++ b/index.html
@@ -279,12 +279,22 @@
           <span class="card-title blue-grey-text text-darken-4">Projects</span>
           <ul class="collapsible popout" data-collapsible="accordion">
             <li>
+              <div class="collapsible-header">GuitarBrush</div>
+              <div class="collapsible-body">
+                <div class="container"><div class="video-container no-controls">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/VIJNv0XXMEw" frameborder="0" allowfullscreen></iframe>
+                </div></div>
+                <p>This is a project for Multimodal Interaction course that we did in KTH in December 2015 &mdash; January 2016. The aim of the project is to visually represent guitar sound with the use of a growing tree metaphor. The tree on the computer screen grows while user plays guitar and how the tree looks like depends on the properties of the played guitar sound. For instance, the size of tree leaves depends on the sound amplitude and the color depends on the pitch.<br><br>
+                For this project I was responsible for guitar sound analyzis. However, I also played significant role on idea development and visual part of the project.</p>
+              </div>
+            </li>
+            <li>
               <div class="collapsible-header">Tommy &mdash; Low-Polygonal-Shaped Action Blocks</div>
               <div class="collapsible-body">
                 <div class="container"><div class="video-container no-controls">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/k9lKO3CLBGM" frameborder="0" allowfullscreen></iframe>
                 </div></div>
-                <p>This is a project for Physical Interaction and Design course that we did in KTH in September - October 2015. Basically, it's a low-polygonal-shaped action blocks toy. All the blocks can stick to each other with the use of magnets. There's one main block that contains some electronics that allow to perform simple play logic: you can shake it and it will produce the sound of some animal. This action will give a child a starting point for building, leaving no limitations for inspiration.<br><br>
+                <p>This is a project for Physical Interaction and Design course that we did in KTH in September &mdash; October 2015. Basically, it's a low-polygonal-shaped action blocks toy. All the blocks can stick to each other with the use of magnets. There's one main block that contains some electronics that allow to perform simple play logic: you can shake it and it will produce the sound of some animal. This action will give a child a starting point for building, leaving no limitations for inspiration.<br><br>
                 For this project we developed everything starting from the idea and ending with the fully-working prototype. I was responsible for all 3D printing, including creation of actual 3D models of the blocks. I also took part in developing idea of the toy, assembling the final prototype and creating a platform (electronical part of the project) with other teammates.<br><br>
                 <strong>Project blog:</strong> <a href="https://actionblocks.wordpress.com" target="_blank" class="styled-link-dark">Action Blocks</a></p>
               </div>
