--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
                 </div></div>
                 <p>This is a project for Physical Interaction and Design course that we did in KTH in September &mdash; October 2015. Basically, it's a low-polygonal-shaped action blocks toy. All the blocks can stick to each other with the use of magnets. There's one main block that contains some electronics that allow to perform simple play logic: you can shake it and it will produce the sound of some animal. This action will give a child a starting point for building, leaving no limitations for inspiration.<br><br>
                 For this project we developed everything starting from the idea and ending with the fully-working prototype. I was responsible for all 3D printing, including creation of actual 3D models of the blocks. I also took part in developing idea of the toy, assembling the final prototype and creating a platform (electronical part of the project) with other teammates.<br><br>
+                This project was also chosen for participation in <a href="http://www.tei-conf.org/16/SDC2.html" target="_blank" class="styled-link-dark">Student Design Challenge of TEI'16 conference</a>.<br><br>
                 <strong>Project blog:</strong> <a href="https://actionblocks.wordpress.com" target="_blank" class="styled-link-dark">Action Blocks</a></p>
               </div>
             </li>
