Add recent paper to publications list

--- a/publications.html
+++ b/publications.html
@@ -1,3 +1,11 @@
+<!-- Authors: Denis Laure, Riccardo Rigo, Charlotte Kortbeek, and Cristian Grama -->
+<a href="http://dl.acm.org/citation.cfm?id=2872959" target="_blank" class="blue-grey-text text-darken-4 collection-item">
+  Denis Laure, Riccardo Rigo, Charlotte Kortbeek, and Cristian Grama. 
+  Tommy Blocks: a modern redesign of the classical children's building blocks.
+  In <cite>Proceedings of the TEI'16: Tenth International Conference on Tangible, Embedded, and Embodied Interaction. 
+  Eindhoven, the Netherlands, 14-17 February 2016</cite>, number ISBN
+  978-1-4503-3582-9, pages 738&ndash;742, ACM, 2016.(doi:10.1145/2839462.2872959)</a>
+
 <!-- Authors: Laure Denis and Medvedev Oleg and Balandin Sergey and Lagutina Ksenia -->
 <a href="http://fruct.org/publications/fruct17/files/Lau.pdf" target="_blank" class="blue-grey-text text-darken-4 collection-item">
 Denis Laure, Oleg Medvedev, Sergey Balandin, and Ksenia Lagutina.
