Update some text stuff

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">About me</span>
-          <p>Hello! My name is Denis Laure and I'm 25 years old student from Russia. Currently I'm doing my MSc degree in the North of Europe &mdash; Stockholm, Sweden. I'm studying Human-Computer Interaction and Design, but I also have strong background in research and software development. I like music, enjoy traveling and learning new things.
+          <p>Hello! My name is Denis Laure and I'm 26 years old computer engineer from Russia. I studied applied mathematics and information science for 5 year in my home city &mdash; Yaroslavl &mdash; and then moved to Europe for 2 years to get two MSc degrees in Human-Computer Interaction and Design. I have strong background in research and software development. I like music, enjoy traveling and learning new things.
           <br><br>
-          <p>Right now I'm doing my internship and Master Thesis at <a href="http://www.ericsson.com" target="_blank" class="styled-link-dark">Ericsson</a>. You can follow the tabs on the top of this page to know more about me. Or just download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
+          <p>Right now I'm working on the development of the software for <a href="http://240000.ru" target="_blank" class="styled-link-dark">the A.V. Tikhov Eye Microsurgery Clinic</a>. At the same time I'm the member of <a href="https://yar.fruct.org" target="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a>, where I'm working on different R&amp;D projects. You can follow the tabs on the top of this page to know more about me. Or just download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
         </div>
         <div class="card-action">
           <a class="modal-trigger" href="#contact">Contact me</a>
@@ -75,7 +75,7 @@
                 <img src="images/KTH_logo.jpg" class="circle responsive-img z-depth-2">
               </div>
               <div class="col s4 valign-wrapper center-align">
-                <p>Currently I'm on the second year studying in <a href="https://www.kth.se/en" target="_blank" class="styled-link-dark">KTH Royal Institute of Technology</a> in Stockholm, Sweden.</p>
+                <p>The second year of education was for me in <a href="https://www.kth.se/en" target="_blank" class="styled-link-dark">KTH Royal Institute of Technology</a> in Stockholm, Sweden.</p>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
             </div>
             <div class="row valign-wrapper">
               <div class="col s5">
-                <p>In 2013 I was accepted for post-graduate studies in Mathematics and Software Engineering for Computers in <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a> in my home city &mdash; Yaroslavl, Russia. Right now I'm on leave of abscence for this studies due to my studies in Europe.</p>
+                <p>In 2013 I was accepted for post-graduate studies in Mathematics and Software Engineering for Computers in <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a> in my home city &mdash; Yaroslavl, Russia. Right now I continue my studies there after finishing my studies in Europe.</p>
               </div>
               <div class="col s2 center-align">
                 <img src="images/YarSU_logo.jpg" class="circle responsive-img z-depth-2">
@@ -206,7 +206,7 @@
                 </div>
               </div>
               <div class="col s4 center-align">
-                <p>Java (SE, EE, Android)</p>
+                <p>Java (SE, EE, Android, JavaFX)</p>
                 <div class="progress">
                   <div class="determinate" style="width: 80%"></div>
                 </div>
@@ -220,15 +220,23 @@
                 </div>
               </div>
               <div class="col s4 center-align">
-                <p>PHP</p>
+                <p>Ruby</p>
                 <div class="progress">
-                  <div class="determinate" style="width: 30%"></div>
+                  <div class="determinate" style="width: 75%"></div>
                 </div>
               </div>
               <div class="col s4 center-align">
                 <p>Python</p>
                 <div class="progress">
                   <div class="determinate" style="width: 60%"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p>PHP</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 30%"></div>
                 </div>
               </div>
             </div>
@@ -244,15 +252,23 @@
                 </div>
               </div>
               <div class="col s4 center-align">
-                <p>Tizen</p>
+                <p>Sailfish OS</p>
                 <div class="progress">
-                  <div class="determinate" style="width: 50%"></div>
+                  <div class="determinate" style="width: 80%"></div>
                 </div>
               </div>
               <div class="col s4 center-align">
                 <p>Symbian, Harmattan, Maemo</p>
                 <div class="progress">
                   <div class="determinate" style="width: 70%"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p>Tizen</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 50%"></div>
                 </div>
               </div>
             </div>
@@ -452,7 +468,7 @@
           <i class="material-icons blue-grey-text text-darken-1">phone</i>
         </div>
         <div class="col s2 valign-wrapper right-align">
-          <span class="blue-grey-text text-darken-1">(+46)~73~846~7113</span>
+          <span class="blue-grey-text text-darken-1">(+7)~915~969~5374</span>
         </div>
       </div>
     </div>
@@ -479,7 +495,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        &copy; 2015-2016 <a class="modal-trigger styled-link-light" href="#contact">Denis Laure</a>, All rights reserved.<a class="modal-trigger styled-link-light right" href="#credits">Credits</a>
+        &copy; 2015-2017 <a class="modal-trigger styled-link-light" href="#contact">Denis Laure</a>, All rights reserved.<a class="modal-trigger styled-link-light right" href="#credits">Credits</a>
       </div>
     </div>
   </footer>
