--- a/index.html
+++ b/index.html
@@ -284,16 +284,23 @@
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">Work experience</span>
           <div class="row valign-wrapper">
-              <div class="col s4 right-border">
-                <p class="right-align"><strong>Member of <a href="https://yar.fruct.org" target="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a> at <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a>.</strong> The laboratory is part of the <a href="http://fruct.org" arget="_blank" class="styled-link-dark">FRUCT</a> organization. During my work there I participated in many different R&amp;D projects in the fields of Smart Spaces, IoT, Mobile and crossplatform development. I also had a chance to present these projects on international conferences.</p>
-              </div>
-              <div class="col s4 right-border">
-                <p class="center-align"><strong>Developer at <a href="http://www.ericsson.com" target="_blank" class="styled-link-dark">Ericsson</a> in Stockholm, Sweden.</strong> I was doing my Master Thesis at Ericsson. My duty was to develop a framework that will allow to easy create tools that use internal simulations software. During the work I also take part in the development of two of such tools.</p>
-              </div>
-              <div class="col s4">
-                <p><strong>Maintenance specialist at <a href="http://globalcorp.ru" target="_blank" class="styled-link-dark">Global Corp</a> in Yaroslavl, Russia.</strong> My main duty in this company was maintance and testing of big online electronic payment system. I also worked on development of the web site of the company.</p>
-              </div>
+            <div class="col s6 right-border">
+              <p class="right-align"><strong>Member of <a href="https://yar.fruct.org" target="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a> at <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a>.</strong> The laboratory is part of the <a href="http://fruct.org" arget="_blank" class="styled-link-dark">FRUCT</a> organization. During my work there I participated in many different R&amp;D projects in the fields of Smart Spaces, IoT, Mobile and crossplatform development. I also had a chance to present these projects on international conferences.</p>
             </div>
+            <div class="col s6">
+              <p><strong>Developer at <a href="http://240000.ru" target="_blank" class="styled-link-dark">the A.V. Tikhov Eye Microsurgery Clinic</a> in Yaroslavl, Russia.</strong> I am working on the development of a modern software that allows to control and test laser equipment for eye microsurgery and perform eye microsurgeries. I am also responsible for maintaining the old software with the same purposes.</p>
+            </div>
+          </div>
+          <div class="divider"></div>
+          <br>
+          <div class="row valign-wrapper">
+            <div class="col s6 right-border">
+              <p class="right-align"><strong>Developer at <a href="http://www.ericsson.com" target="_blank" class="styled-link-dark">Ericsson</a> in Stockholm, Sweden.</strong> I was doing my Master Thesis at Ericsson. My duty was to develop a framework that will allow to easy create tools that use internal simulations software. During the work I also take part in the development of two of such tools.</p>
+            </div>
+            <div class="col s6">
+              <p><strong>Maintenance specialist at <a href="http://globalcorp.ru" target="_blank" class="styled-link-dark">Global Corp</a> in Yaroslavl, Russia.</strong> My main duty in this company was maintance and testing of big online electronic payment system. I also worked on development of the web site of the company.</p>
+            </div>
+          </div>
           <div class="divider"></div>
           <span class="card-title blue-grey-text text-darken-4">Projects</span>
           <ul class="collapsible popout" data-collapsible="accordion">
@@ -329,7 +336,7 @@
                   <col width="30%">
                   <thead>
                     <tr>
-                        <th class="center-align" data-field="bpd"><a href="https://play.google.com/store/apps/details?id=org.fruct.yar.bloodpressurediary" target="_blank" class="styled-link-dark">Blood Presure Diary</a> (and it's paid version &mdash; <a href="https://play.google.com/store/apps/details?id=org.fruct.yar.bloodpressurediary.pro" target="_blank" class="styled-link-dark">Blood Pressure Diary Pro</a>)</th>
+                        <th class="center-align" data-field="bpd"><a href="https://play.google.com/store/apps/details?id=org.fruct.yar.bloodpressurediary" target="_blank" class="styled-link-dark">Blood Presure Diary</a></th>
                         <th class="center-align" data-field="wd"><a href="https://play.google.com/store/apps/details?id=org.fruct.yar.weightdiary" target="_blank" class="styled-link-dark">Weight Diary</a></th>
                         <th class="center-align" data-field="hsd"><a href="https://play.google.com/store/apps/details?id=org.fruct.yar.healthysleepdiary" target="_blank" class="styled-link-dark">Healthy Sleep Diary</a></th>
                     </tr>
