--- a/publications.html
+++ b/publications.html
@@ -2,7 +2,7 @@
 <a href="http://fruct.org/publications/fruct19/files/Lau.pdf" target="_blank" class="blue-grey-text text-darken-4 collection-item">
   Denis Laure, Andrey Vasilyev, Ilya Paramonov, and Natalia Kasatkina. 
   Cross-Platform Development for Sailfish OS and Android: Architectural Patterns and “Dictionary Trainer” Application Case Study.
-  In <cite>Proceedings of the FRUCT’19. Jyvaskyla, Finland, 7-11 November 2016</cite>, number ISBN
+  In <cite>Proceedings of the FRUCT’19. Jyv&auml;skyl&auml;, Finland, 7-11 November 2016</cite>, number ISBN
   978-952-68397-5-2, pages 145&ndash;150, St.-Petersburg, 2016. FRUCT, ITMO
   University.</a>
 
