--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="card-title blue-grey-text text-darken-4">About me</span>
           <p>Hello! My name is Denis Laure and I'm 26 years old computer engineer from Russia. I studied applied mathematics and information science for 5 year in my home city &mdash; Yaroslavl &mdash; and then moved to Europe for 2 years to get two MSc degrees in Human-Computer Interaction and Design. I have strong background in research and software development. I like music, enjoy traveling and learning new things.
           <br><br>
-          <p>Right now I'm working on the development of the software for <a href="http://240000.ru" target="_blank" class="styled-link-dark">the A.V. Tikhov Eye Microsurgery Clinic</a>. At the same time I'm the member of <a href="https://yar.fruct.org" target="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a>, where I'm working on different R&amp;D projects. You can follow the tabs on the top of this page to know more about me. Or just download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
+          <p>Right now I'm working on the development of the software for <a href="http://240000.ru" target="_blank" class="styled-link-dark">A.V. Tikhov Eye Microsurgery Clinic</a>. At the same time I'm the member of <a href="https://yar.fruct.org" target="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a>, where I'm working on different R&amp;D projects. You can follow the tabs on the top of this page to know more about me. Or just download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
         </div>
         <div class="card-action">
           <a class="modal-trigger" href="#contact">Contact me</a>
@@ -288,7 +288,7 @@
               <p class="right-align"><strong>Member of <a href="https://yar.fruct.org" target="_blank" class="styled-link-dark">Yaroslavl FRUCT Laboratory</a> at <a href="http://www.uniyar.ac.ru/en/" target="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a>.</strong> The laboratory is part of the <a href="http://fruct.org" arget="_blank" class="styled-link-dark">FRUCT</a> organization. During my work there I participated in many different R&amp;D projects in the fields of Smart Spaces, IoT, Mobile and crossplatform development. I also had a chance to present these projects on international conferences.</p>
             </div>
             <div class="col s6">
-              <p><strong>Developer at <a href="http://240000.ru" target="_blank" class="styled-link-dark">the A.V. Tikhov Eye Microsurgery Clinic</a> in Yaroslavl, Russia.</strong> I am working on the development of a modern software that allows to control and test laser equipment for eye microsurgery and perform eye microsurgeries. I am also responsible for maintaining the old software with the same purposes.</p>
+              <p><strong>Developer at <a href="http://240000.ru" target="_blank" class="styled-link-dark">A.V. Tikhov Eye Microsurgery Clinic</a> in Yaroslavl, Russia.</strong> I am working on the development of a modern software that allows to control and test laser equipment for eye surgeries and perform them. I am also responsible for maintaining the old software with the same purposes.</p>
             </div>
           </div>
           <div class="divider"></div>
