Update Materialize to v 0.97.8

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <div id="main-tab" class="row">
     <div class="col s12">
       <ul class="tabs">
-        <li class="tab col s3"><a id="aboutMeTab" class="waves-effect active" href="#about">About me</a></li>
-        <li class="tab col s3"><a id="educationTab" class="waves-effect" href="#education">Education</a></li>
-        <li class="tab col s3"><a id="skillsTab" class="waves-effect" href="#skills">Skills</a></li>
-        <li class="tab col s3"><a id="projectsTab" class="waves-effect" href="#projects">Experience</a></li>
-        <li class="tab col s3"><a id="awardsTab" class="waves-effect" href="#awards">Awards</a></li>
-        <li class="tab col s3"><a id="publicationsTab" class="waves-effect" href="#publications">Publications</a></li>
+        <li class="tab col s2"><a id="aboutMeTab" class="waves-effect active" href="#about">About me</a></li>
+        <li class="tab col s2"><a id="educationTab" class="waves-effect" href="#education">Education</a></li>
+        <li class="tab col s2"><a id="skillsTab" class="waves-effect" href="#skills">Skills</a></li>
+        <li class="tab col s2"><a id="projectsTab" class="waves-effect" href="#projects">Experience</a></li>
+        <li class="tab col s2"><a id="awardsTab" class="waves-effect" href="#awards">Awards</a></li>
+        <li class="tab col s2"><a id="publicationsTab" class="waves-effect" href="#publications">Publications</a></li>
       </ul>
     </div>
   </div>
@@ -169,6 +169,7 @@
                   <div class="determinate" style="width: 70%"></div>
                 </div>
               </div>
+              <div class="col s4 center-align"></div>
             </div>
           </div>
           <div class="divider"></div>
@@ -187,6 +188,7 @@
                   <div class="determinate" style="width: 60%"></div>
                 </div>
               </div>
+              <div class="col s4 center-align"></div>
             </div>
           </div>
           <div class="divider"></div>
@@ -239,6 +241,8 @@
                   <div class="determinate" style="width: 30%"></div>
                 </div>
               </div>
+              <div class="col s4 center-align"></div>
+              <div class="col s4 center-align"></div>
             </div>
           </div>
           <div class="divider"></div>
@@ -271,6 +275,8 @@
                   <div class="determinate" style="width: 50%"></div>
                 </div>
               </div>
+              <div class="col s4 center-align"></div>
+              <div class="col s4 center-align"></div>
             </div>
           </div>
         </div>
